Remove MaxPermSize from jar.runlarge target.
[2042]